--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,15 @@
         </activity>
 
         <activity android:name=".Register"
-                  android:label="Register"
-                  android:launchMode="singleTop">
+                  android:label=""
+                  android:launchMode="singleTop"
+                  android:theme="@style/AppTransparent">
         </activity>
 
         <activity android:name=".Login"
-                  android:label="Login"
-                  android:launchMode="singleTop">
+                  android:label=""
+                  android:launchMode="singleTop"
+                  android:theme="@style/AppTransparent">
 
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".Register"/>
