--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,24 +18,30 @@
                   android:theme="@style/noTransition">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity android:name=".MainLogin"
+                  android:label=""
+                  android:launchMode="singleTop"
+                  android:theme="@style/AppTransparent">
         </activity>
 
         <activity android:name=".Register"
                   android:label=""
                   android:launchMode="singleTop"
                   android:theme="@style/AppTransparent">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".Login"/>
         </activity>
 
         <activity android:name=".Login"
                   android:label=""
                   android:launchMode="singleTop"
                   android:theme="@style/AppTransparent">
-
             <meta-data android:name="android.support.PARENT_ACTIVITY"
-                       android:value=".Register"/>
+                       android:value=".MainLogin"/>
         </activity>
 
         <activity android:name=".ArticleMain"
@@ -49,10 +55,8 @@
                   android:launchMode="singleTop"
                   android:label=""
                   android:theme="@style/AppTransparent">
-
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ArticleMain"/>
-
         </activity>
 
         <activity android:name=".PostMain"
@@ -74,14 +78,15 @@
                   android:launchMode="singleTop"
                   android:label="Profile Edit"
                   android:theme="@style/AppTransparent">
-
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ProfileMain"/>
         </activity>
+
         <activity android:name=".ImageFullscreen"
                   android:label=""
                   android:theme="@style/fullScreen">
         </activity>
+
         <activity android:name=".ProfileMain"
                   android:label="Profile Main"
                   android:launchMode="singleTop"
@@ -89,6 +94,25 @@
         </activity>
 
         <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+                   android:value="@string/facebook_app_id"/>
+
+        <activity android:name="com.facebook.FacebookActivity"
+                  android:configChanges=
+                          "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+                  android:label="@string/app_name" />
+        <activity
+                android:name="com.facebook.CustomTabActivity"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
 
     </application>
 
