--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,9 @@
         </activity>
 
         <activity android:name=".PostAdd"
-                  android:label="Add Post">
+                  android:launchMode="singleTop"
+                  android:label="Add Post"
+            android:windowSoftInputMode="stateHidden">
         </activity>
 
         <activity android:name=".ProfileEdit"
