--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,13 @@
                   android:theme="@style/noTransition">
         </activity>
 
+        <activity android:name=".MissionDetail"
+                  android:label="Mission"
+                  android:launchMode="singleTop">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".MissionMain"/>
+        </activity>
+
         <activity android:name=".ArticleMain"
                   android:label=""
                   android:launchMode="singleTop"
@@ -102,8 +109,7 @@
 
         <activity android:name=".ProfileEdit"
                   android:launchMode="singleTop"
-                  android:label="Profile Edit"
-                  android:theme="@style/AppTransparent">
+                  android:label="Profile Edit">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ProfileMain"/>
         </activity>
