--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
 
@@ -107,13 +108,6 @@
             android:windowSoftInputMode="stateHidden">
         </activity>
 
-        <activity android:name=".ProfileEdit"
-                  android:launchMode="singleTop"
-                  android:label="Profile Edit">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                       android:value=".ProfileMain"/>
-        </activity>
-
         <activity android:name=".ImageFullscreen"
                   android:label=""
                   android:theme="@style/fullScreen">
@@ -123,6 +117,16 @@
                   android:launchMode="singleTop"
                   android:label="Profile"
                   android:theme="@style/noTransition">
+        </activity>
+
+        <activity android:name=".ProfileEdit"
+                  android:launchMode="singleTop"
+                  android:label="Profile Edit">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                       android:value=".ProfileMain"/>
+        </activity>
+
+        <activity android:name=".ChangePP">
         </activity>
 
         <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
