--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
         </activity>
 
         <activity android:name=".MissionList"
-                  android:label="Post"
+                  android:label="Choose Post"
                   android:launchMode="singleTop">
         </activity>
 
